--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,9 +59,9 @@ dependencies {
     // SwipeRefresh
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
     // Room
-//    api "androidx.room:room-runtime:2.3.0"
-    implementation "androidx.room:room-runtime:2.3.0"
+//    api "androidx.room:room-runtimeime:2.3.0"
     kapt  "androidx.room:room-compiler:2.3.0"
+    implementation "androidx.room:room-runtime:2.3.0"
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.8.2'
     implementation 'com.squareup.retrofit2:converter-gson:2.8.2'
